# orc

./: .gitignore  AGENTS.md  PLAN.md  PROPOSALS.md  README.md  __ref.md  blob  changelog.md  cursor.integration.md  followup_markers.json  orc-plan.md  orc.py  orcs.py  problem.txt  pyproject.toml  ref.md  run  techspec.md
.orc/: telegram.json.example
adr/: 0001-hook-scripts-file-templates.md  0001-tui-message-worker.md  0002-executable-hook-commands.md  0002-hook-headless-env-gate.md
docs/: diagnostics-runbook.md  notifications.md  orc-autonomy-ledger.md
hook_templates/: orc_before_submit.py.tmpl  orc_hook_lib.py.tmpl  orc_stop.py.tmpl
orc_core/: __init__.py  agent_preflight.py  backend.py  backlog.py  backlog_detector.py  backlog_markdown_parser.py  backlog_orchestrator.py  backlog_status.py  cli_app.py  config.py  crash_handler.py  escape_exit.py  exceptions.py  execution_screen.py  failure_reasons.py  git_helpers.py  gitignore_guard.py  hooks.py  integration_manager.py  kanban_agent_output.py  kanban_board.py  kanban_card.py  kanban_constants.py  kanban_distributor.py  kanban_incident_manager.py  kanban_init.py  kanban_publisher.py  kanban_pull.py  kanban_request_builder.py  kanban_roles.py  kanban_session_manager.py  kanban_snapshot.py  kanban_task_source.py  kanban_teamlead_runner.py  kanban_worker_runner.py  log.py  logging.py  model_selector.py  monitor.py  monitor_protocol.py  (+40 more)
prompts/: commit.txt  conflict_analysis.txt  continue.txt  default.txt  design.txt  kanban_architect.txt  kanban_coder.txt  kanban_integrator.txt  kanban_product.txt  planning.txt  (+8 more)
(+564 files in other folders)
